--- a/bloco3/index.html
+++ b/bloco3/index.html
@@ -12,5 +12,7 @@
         <p>bla bla bla bla bla bla bla bla </p>
         <p>ble ble ble ble ble ble ble ble </p>
         <p>bli blib bli bli bli bli bli bli</p>
+        <img src="/home/luis/Downloads/ESTÁDIO-DO-MORUMBI-FOTO-FERNANDO-TORRES-750x455.jpeg" alt="morumbi" width="400px"> <br>
+        <a href="https://www.google.com" target="_blank">acesse ao google</a>
     </body>
 </html>
